* Validate record before switching view
* Refactoring:
    * Better naming in model
    * Group extends list
    * Add an index to Group
    * New common windows for dialog of many2one, one2many and many2many
    * one2many and many2many dialog use the same screen than the widget
    * Reduce the number of option in Screen
    * Remove RPCProxy to handle logout exception on every server call
    * Better naming of event signals
    * Fix on_change detection for many2many for issue1400
* Add PySON to replace python string evaluation
* Don't show "Spell Checking" option if gtkspell is not present
* Use the same internal model for many2many and one2many fields
* Remove egenix-mx-base and replace it by python-dateutil
* Add cache to safe_eval
* Use versioned configuration directory
* Next and Previous scroll per page on list and don't loop
* Add AccelGroup on search windows (CTRL+Return)
* Use same keyboard shortcut for xxx2many than for other fields

Version 1.4.0 - 2009-10-19
* Bug fixes (see mercurial logs for details)
* Handle datetime_field in xxx2Many
* Add new safe_eval
* Ask previous password for set_preferences on password change
* Add "Statusbar" option
* Add default filename for database backup
* Add checkbox on restore to update database
* Add 'login.host' options to hide server connection
* Handle required attribute with local domains
* Allow to run wizard in tabs
* Remove statusbar on form for more space
* Add "Change Accelerators" option
* Use gzip in pysocket
* Use the report name to create the temporary file to open it
* Allow to store wizard size
* Add reset default on fields
* Store in config default width and height of main window
* Added arrow navigation if supported by gtk
* Add 'starts with' and 'ends with' on char search
* Handle domain with '=' or '!=' as operator on selection
* Extend fields domain with local domains
* Improve float time widget to handle year, month, week and day
  and handle float_time attribute for contextual time convertion