@@ -1,3 +1,4 @@
+* Use lazy load in Import/Export windows
 * Validate record before switching view
 * Refactoring:
     * Better naming in model
